# LeetCode-Solution

./: README.md
C++/: .gitignore  CMakeLists.txt
C++/Array/: 1018. Binary Prefix Divisible By 5.cpp  1094. Car Pooling.cpp  1184. Distance Between Bus Stops.cpp  1260. Shift 2D Grid.cpp  1535. Find the Winner of an Array Game.cpp  1701. Average Waiting Time.cpp  1752. Check if Array Is Sorted and Rotated.cpp  1860. Incremental Memory Leak.cpp  1861. Rotating the Box.cpp  2016. Maximum Difference Between Increasing Elements.cpp  2022. Convert 1D Array Into 2D Array.cpp  2079. Watering Plants.cpp  2104. Sum of Subarray Ranges.cpp  2145. Count the Hidden Sequences.cpp  2148. Count Elements With Strictly Smaller and Greater Elements.cpp  2154. Keep Multiplying Found Values by Two.cpp  2161. Partition Array According to Given Pivot.cpp  2176. Count Equal and Divisible Pairs in an Array.cpp  2200. Find All K-Distant Indices in an Array.cpp  2201. Count Artifacts That Can Be Extracted.cpp  2210. Count Hills and Valleys in an Array.cpp  2221. Find Triangular Sum of an Array.cpp  2303. Calculate Amount Paid in Taxes.cpp  2309. Greatest English Letter in Upper and Lower Case.cpp  2319. Check if Matrix Is X-Matrix.cpp  2326. Spiral Matrix IV.cpp  2373. Largest Local Values in a Matrix.cpp  2374. Node With Highest Edge Score.cpp  2455. Average Value of Even Numbers That Are Divisible by Three.cpp  2460. Apply Operations to an Array.cpp  2500. Delete Greatest Value in Each Row.cpp  2515. Shortest Distance to Target String in a Circular Array.cpp  2529. Maximum Count of Positive Integer and Negative Integer.cpp  287. Find the Duplicate Number.cpp  289. Game of Life.cpp  498. Diagonal Traverse.cpp  766. Toeplitz Matrix.cpp  849. Maximize Distance to Closest Person.cpp  867. Transpose Matrix.cpp  941. Valid Mountain Array.cpp  (+49 more)
C++/Backtracking/: 131. Palindrome Partitioning.cpp  2305. Fair Distribution of Cookies.cpp  2375. Construct Smallest Number From DI String.cpp  473. Matchsticks to Square.cpp  491. Non-decreasing Subsequences .cpp  93. Restore IP Addresses.cpp  Combination Sum II.cpp  Combination Sum.cpp  Combinations.cpp  Count Number of Maximum Bitwise-OR Subsets.cpp  Letter Case Permutation.cpp  Letter Combinations of a Phone Number.cpp  Maximize Score After N Operations.cpp  N-Queens II.cpp  N-Queens.cpp  Partition to K Equal Sum Subsets.cpp  Path with Maximum Gold.cpp  Permutations II.cpp  Permutations.cpp  Subsets.cpp
C++/Binary Search/: 1385. Find the Distance Value Between Two Arrays.cpp  1482. Minimum Number of Days to Make m Bouquets.cpp  1539. Kth Missing Positive Number.cpp  1631. Path With Minimum Effort.cpp  1648. Sell Diminishing-Valued Colored Balls.cpp  1802. Maximum Value at a Given Index in a Bounded Array.cpp  2226. Maximum Candies Allocated to K Children.cpp  2251. Number of Flowers in Full Bloom.cpp  2389. Longest Subsequence With Limited Sum.cpp  2439. Minimize Maximum of Array.cpp  367. Valid Perfect Square.cpp  441. Arranging Coins.cpp  475. Heaters.cpp  69. Sqrt x.cpp  744. Find Smallest Letter Greater Than Target.cpp  852. Peak Index in a Mountain Array.cpp  875. Koko Eating Bananas.cpp  Binary Search.cpp  Find First and Last Position of Element in Sorted Array.cpp  Find K Closest Elements.cpp  Find Minimum in Rotated Sorted Array.cpp  Find Peak Element.cpp  Find Smallest Letter Greater Than Target.cpp  First Bad Version.cpp  Minimized Maximum of Products Distributed to Any Store.cpp  Search Insert Position .cpp  Search in Rotated Sorted Array II.cpp  Single Element in a Sorted Array.cpp
C++/Bit Manipulation/: 1009. Complement of Base 10 Integer.cpp  1239. Maximum Length of a Concatenated String with Unique Characters.cpp  1318. Minimum Flips to Make a OR b Equal to c.cpp  1371. Find the Longest Substring Containing Vowels in Even Counts.cpp  1542. Find Longest Awesome Substring.cpp  2220. Minimum Bit Flips to Convert Number.cpp  2438. Range Product Queries of Powers.cpp  2506. Count Pairs Of Similar Strings.cpp  318. Maximum Product of Word Lengths.cpp  338. Counting Bits.cpp  476. Number Complement.cpp  Binary Gap.cpp  Binary Number with Alternating Bits.cpp  Bitwise AND of Numbers Range.cpp  Check If a String Contains All Binary Codes of Size K.cpp  Decode XORed Array.cpp  Hamming Distance.cpp  Number of 1 Bits.cpp  Power of Two.cpp  Prime Number of Set Bits in Binary Representation.cpp  Reverse Bits.cpp  Single Element in a Sorted Array.cpp  Single Number.cpp  Sum of All Subset XOR Totals.cpp
C++/Breadth-first Search/: 1020. Number of Enclaves.cpp  1162. As Far from Land as Possible.cpp  127. Word Ladder.cpp  1345. Jump Game IV.cpp  1905. Count Sub Islands.cpp  1926. Nearest Exit from Entrance in Maze.cpp  2101. Detonate the Maximum Bombs.cpp  2415. Reverse Odd Levels of Binary Tree.cpp  433. Minimum Genetic Mutation.cpp  847. Shortest Path Visiting All Nodes.cpp  863. All Nodes Distance K in Binary Tree.cpp  934. Shortest Bridge.cpp  Cheapest Flights Within K Stops.cpp  Even Odd Tree.cpp  Find if Path Exists in Graph.cpp  Jump Game III.cpp  Minimum Operations to Convert Number.cpp  Populating Next Right Pointers in Each Node II.cpp  Shortest Path in Binary Matrix.cpp  Shortest Path in a Grid with Obstacles Elimination.cpp  The Time When the Network Becomes Idle.cpp
C++/Depth-first Search/: 1038. Binary Search Tree to Greater Sum Tree.cpp  124. Binary Tree Maximum Path Sum.cpp  1261. Find Elements in a Contaminated Binary Tree.cpp  1305. All Elements in Two Binary Search Trees.cpp  1315. Sum of Nodes with Even-Valued Grandparent.cpp  133. Clone Graph.cpp  138. Copy List with Random Pointer.cpp  1443. Minimum Time to Collect All Apples in a Tree.cpp  1448. Count Good Nodes in Binary Tree.cpp  1457. Pseudo-Palindromic Paths in a Binary Tree.cpp  1519. Number of Nodes in the Sub-Tree With the Same Label.cpp  1559. Detect Cycles in 2D Grid.cpp  1706. Where Will the Ball Fall.cpp  200. Number of Islands.cpp  2101. Detonate the Maximum Bombs.cpp  222. Count Complete Tree Nodes.cpp  2265. Count Nodes Equal to Average of Subtree.cpp  399. Evaluate Division.cpp  (+33 more)
(+877 files in other folders)
