cmake_minimum_required(VERSION 3.17)
project(C_Plus_Plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(CoinChange "Dynamic Programming/Coin_Change/CoinChange.cpp")
add_executable(CoinChange-OptimizeSpace "Dynamic Programming/Coin_Change/CoinChange_OptimizeSpace.cpp")
add_executable(Climbing_Stairs "Dynamic Programming/Climbing Stairs.cpp")
add_executable(Check-If-a-String-Contains-All-Binary-Codes-of-Size "Bit Manipulation/Check If a String Contains All Binary Codes of Size K.cpp")
add_executable(Swapping-Nodes-in-a-Linked-List "Linked List/Swapping Nodes in a Linked List.cpp")
add_executable(Symmetric-Tree "Tree/Symmetric Tree.cpp")
add_executable(Path-sum "Tree/Path Sum.cpp")
add_executable(Encode-and-Decode-TinyURL "Hash Map/Encode and Decode TinyURL.cpp")
add_executable(Richest-Customer-Wealth "Array/Richest Customer Wealth.cpp")
add_executable(Factorial-Trailing-Zeroes "Math/Factorial Trailing Zeroes.cpp")
add_executable(Count-Items-Matching-a-Rule "Array/Count Items Matching a Rule.cpp")
add_executable(Linked-List-Cycle "Two Pointers/Linked List Cycle.cpp")
add_executable(Keys-and-Rooms "Depth-first Search/Keys and Rooms.cpp")
add_executable(Reordered-Power-of-2 "Math/Reordered Power of 2.cpp")
add_executable(Reverse-Linked-List "Linked List/Reverse Linked List.cpp")
add_executable(Advantage-Shuffle "Array/Advantage Shuffle.cpp")
add_executable(Russian-Doll-Envelopes "Dynamic Programming/Russian Doll Envelopes.cpp")
add_executable(Sort-Colors "Two Pointers/Sort Colors.cpp")