cmake_minimum_required(VERSION 3.17)
project(C_Plus_Plus)

set(CMAKE_CXX_STANDARD 14)

add_executable(CoinChange "Dynamic Programming/Coin_Change/CoinChange.cpp")
add_executable(CoinChange-OptimizeSpace "Dynamic Programming/Coin_Change/CoinChange_OptimizeSpace.cpp")
add_executable(Climbing_Stairs "Dynamic Programming/Climbing Stairs.cpp")
add_executable(Check-If-a-String-Contains-All-Binary-Codes-of-Size "Bit Manipulation/Check If a String Contains All Binary Codes of Size K.cpp")
add_executable(Swapping-Nodes-in-a-Linked-List "Linked List/Swapping Nodes in a Linked List.cpp")
add_executable(Symmetric-Tree "Tree/Symmetric Tree.cpp")
add_executable(Path-sum "Tree/Path Sum.cpp")
add_executable(Encode-and-Decode-TinyURL "Hash Map/Encode and Decode TinyURL.cpp")
add_executable(Richest-Customer-Wealth "Array/Richest Customer Wealth.cpp")
add_executable(Factorial-Trailing-Zeroes "Math/Factorial Trailing Zeroes.cpp")
add_executable(Count-Items-Matching-a-Rule "Array/Count Items Matching a Rule.cpp")
add_executable(Linked-List-Cycle "Two Pointers/Linked List Cycle.cpp")
add_executable(Keys-and-Rooms "Depth-first Search/Keys and Rooms.cpp")
add_executable(Reordered-Power-of-2 "Math/Reordered Power of 2.cpp")
add_executable(Reverse-Linked-List "Linked List/Reverse Linked List.cpp")
add_executable(Advantage-Shuffle "Array/Advantage Shuffle.cpp")
add_executable(Russian-Doll-Envelopes "Dynamic Programming/Russian Doll Envelopes.cpp")
add_executable(Sort-Colors "Two Pointers/Sort Colors.cpp")
add_executable(Minimum-Window-Substring "Two Pointers/Minimum Window Substring.cpp")
add_executable(Minimum-Operations-to-Make-Array-Equal "Math/Minimum Operations to Make Array Equal.cpp")
add_executable(Maximum-Ascending-Subarray-Sum "Two Pointers/Maximum Ascending Subarray Sum.cpp")
add_executable(Count-Number-of-Nice-Subarrays "Two Pointers/Count Number of Nice Subarrays.cpp")
add_executable(Minimum-Size-Subarray-Sum "Two Pointers/Minimum Size Subarray Sum.cpp")
add_executable(Subarrays-with-K-Different-Integers "Two Pointers/Subarrays with K Different Integers.cpp")
add_executable(Letter-Combinations-of-a-Phone-Number "Backtracking/Letter Combinations of a Phone Number.cpp")
add_executable(Max-Consecutive-Ones-III "Two Pointers/Max Consecutive Ones III.cpp")
add_executable(Fruit-Into-Baskets "Two Pointers/Fruit Into Baskets.cpp")
add_executable(Verifying-an-Alien-Dictionary "Hash Map/Verifying an Alien Dictionary.cpp")
add_executable(Binary-Subarrays-With-Sum "Two Pointers/Binary Subarrays With Sum.cpp")
add_executable(Boats-to-Save-People "Two Pointers/Boats to Save People.cpp")
add_executable(Subtract-the-Product-and-Sum-of-Digits-of-an-Integer "Math/Subtract the Product and Sum of Digits of an Integer.cpp")
add_executable(Power-of-Two "Bit Manipulation/Power of Two.cpp")
add_executable(Ugly-Number "Math/Ugly Number.cpp")
add_executable(Deepest-Leaves-Sum "Tree/Deepest Leaves Sum.cpp")
add_executable(Calculate-Money-in-Leetcode-Bank "Math/Calculate Money in Leetcode Bank.cpp")
add_executable(Remove-All-Adjacent-Duplicates-in-String-II "Stack/Remove All Adjacent Duplicates in String II.cpp")
add_executable(Convert-Sorted-Array-to-Binary-Search-Tree "Tree/Convert Sorted Array to Binary Search Tree.cpp")
add_executable(N-ary-Tree-Preorder-Traversal "Tree/N-ary Tree Preorder Traversal.cpp")
add_executable(N-ary-Tree-Postorder-Traversal "Tree/N-ary Tree Postorder Traversal.cpp")
add_executable(N-ary-Tree-Level-Order-Traversal "Tree/N-ary Tree Level Order Traversal.cpp")
add_executable(Binary-Tree-Level-Order-Traversal-II "Tree/Binary Tree Level Order Traversal II.cpp")
add_executable(Binary-Tree-Zigzag-Level-Order-Traversal "Tree/Binary Tree Zigzag Level Order Traversal.cpp")
add_executable(Linked-List-Cycle- "Linked List/Linked List Cycle.cpp")
add_executable(Triangle "Dynamic Programming/Triangle.cpp")
add_executable(Brick-Wall "Hash Map/Brick Wall.cpp")
add_executable(Count-Binary-Substrings "String/Count Binary Substrings.cpp")
add_executable(Minimum-Falling-Path-Sum "Dynamic Programming/Minimum Falling Path Sum.cpp")
add_executable(Rotate-Image "Array/Rotate Image.cpp")
add_executable(Furthest-Building-You-Can-Reach "Heap/Furthest Building You Can Reach.cpp")
add_executable(Power-of-Three "Math/Power of Three.cpp")
add_executable(Unique-Paths-II "Dynamic Programming/Unique Paths II.cpp")
add_executable(Kth-Largest-Element-in-a-Stream "Heap/Kth Largest Element in a Stream.cpp")
add_executable(Running-Sum-of-1d-Array "Array/Running Sum of 1d Array.cpp")
add_executable(Split-a-String-in-Balanced-Strings "String/Split a String in Balanced Strings.cpp")
add_executable(Latest-Time-by-Replacing-Hidden-Digits "String/Latest Time by Replacing Hidden Digits.cpp")
add_executable(Minimum-Absolute-Difference "Array/Minimum Absolute Difference.cpp")